Fixed toolbar from being underneath the z-index of the video player. Can now grab title.

--- a/src/browser_action/browser_action.css
+++ b/src/browser_action/browser_action.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 .rn_footer {
-  bottom: 5px;
+  bottom: 2px;
   color: #707070;
   left: 50%;
   position: absolute;
