--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -201,6 +201,7 @@ input[type="radio"] {
 	list-style: none;
 	padding-left: 0;
 	position: absolute;
+	z-index: 999;
 }
 
 #rn_tools li {
